core/main/default/objects/CoreSetting__mdt/CoreSetting__mdt.object-meta.xml
<CustomObject>
    <description>SSDL Framework core settings</description>
    <label>Core Setting</label>
    <pluralLabel>Core Settings</pluralLabel>
</CustomObject>