core/main/default/objects/CoreSetting__mdt/fields/BypassAllTriggerPermission__c.field-meta.xml
<CustomField>
    <fullName>BypassAllTriggerPermission__c</fullName>
    <description>Custom Permission Name used to Bypass all triggers</description>
    <label>Bypass All Trigger Permission</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>