core/main/default/objects/CoreSetting__mdt/fields/BypassSchemaDescriberPermission__c.field-meta.xml
<CustomField>
    <fullName>BypassSchemaDescriberPermission__c</fullName>
    <description>Custom Permission Name used to Bypass schema describer check</description>
    <label>Bypass Schema Describer Permission</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>