core/main/default/objects/CoreSetting__mdt/fields/BypassStripinaccessiblePermission__c.field-meta.xml
<CustomField>
    <fullName>BypassStripinaccessiblePermission__c</fullName>
    <description>Custom Permission Name used to Bypass StripInaccessible</description>
    <label>Bypass Stripinaccessible Permission</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>