core/main/default/objects/CoreSetting__mdt/fields/BypassWithSecurityPermission__c.field-meta.xml
<CustomField>
    <fullName>BypassWithSecurityPermission__c</fullName>
    <description>Custom Permission Name used to Bypass with security enforced</description>
    <label>Bypass With Security Permission</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>