core/main/default/objects/CoreSetting__mdt/fields/CalloutTrackingEnabled__c.field-meta.xml
<CustomField>
    <fullName>CalloutTrackingEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Monitor callout activities and send a platform event</description>
    <inlineHelpText>Monitor callout activities and send a platform event</inlineHelpText>
    <label>Callout Tracking Enabled</label>
    <type>Checkbox</type>
</CustomField>