core/main/default/objects/CoreSetting__mdt/fields/CoreTriggerManagerClass__c.field-meta.xml
<CustomField>
    <fullName>CoreTriggerManagerClass__c</fullName>
    <description>Trigger Manager Core Class Name used to instanciate dynamically default one or project specific one</description>
    <inlineHelpText>prefix your class name with &quot;local.&quot; if not using default one.</inlineHelpText>
    <label>Core Trigger Manager Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>