core/main/default/objects/CoreSetting__mdt/fields/EnableCalloutTrackingPermission__c.field-meta.xml
<CustomField>
    <fullName>EnableCalloutTrackingPermission__c</fullName>
    <description>Track callout and generate an event per user</description>
    <inlineHelpText>Track callout and generate an event per user</inlineHelpText>
    <label>Enable Callout Tracking Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>