core/main/default/objects/CoreSetting__mdt/fields/EnableLoggingEventPermission__c.field-meta.xml
<CustomField>
    <fullName>EnableLoggingEventPermission__c</fullName>
    <description>Generate and send platform event per user</description>
    <inlineHelpText>Generate and send platform event per user</inlineHelpText>
    <label>Enable Logging Event Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>