core/main/default/objects/CoreSetting__mdt/fields/EnableLoggingPermission__c.field-meta.xml
<CustomField>
    <fullName>EnableLoggingPermission__c</fullName>
    <description>Custom Permission to enable logging per user</description>
    <inlineHelpText>Custom Permission to enable logging per user</inlineHelpText>
    <label>Enable Logging Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>