core/main/default/objects/CoreSetting__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Core Setting used when checked for the corresponding org</description>
    <label>is Active ?</label>
    <type>Checkbox</type>
</CustomField>