core/main/default/objects/CoreSetting__mdt/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default setting when configuration has not been set for org</description>
    <label>is Default ?</label>
    <type>Checkbox</type>
</CustomField>