core/main/default/objects/CoreSetting__mdt/fields/LoggingEnabled__c.field-meta.xml
<CustomField>
    <fullName>LoggingEnabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Activate or desactivate custom debug from APU000_Logger</description>
    <label>Logging Enabled</label>
    <type>Checkbox</type>
</CustomField>