core/main/default/objects/CoreSetting__mdt/fields/LoggingEventEnabled__c.field-meta.xml
<CustomField>
    <fullName>LoggingEventEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Generate and send a platform event</description>
    <inlineHelpText>Generate and send a platform event</inlineHelpText>
    <label>Logging Event Enabled</label>
    <type>Checkbox</type>
</CustomField>