core/main/default/objects/CoreSetting__mdt/fields/OrgId__c.field-meta.xml
<CustomField>
    <fullName>OrgId__c</fullName>
    <description>Id of the org where setting is available</description>
    <label>Org Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>