core/main/default/objects/CoreSetting__mdt/fields/RecursionLevel__c.field-meta.xml
<CustomField>
    <fullName>RecursionLevel__c</fullName>
    <description>Set trigger recursion level from 0-9, null means no restriction</description>
    <inlineHelpText>Set trigger recursion level from 0-9, null means no restriction</inlineHelpText>
    <label>Recursion Level</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>