core/main/default/objects/CoreSetting__mdt/fields/SobjectInfoSessionCache__c.field-meta.xml
<CustomField>
    <fullName>SobjectInfoSessionCache__c</fullName>
    <description>Session cache partition used to store user and Sobject information</description>
    <label>SObject Info Session Cache</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>