core/main/default/objects/CoreSetting__mdt/fields/UserInfoSessionCache__c.field-meta.xml
<CustomField>
    <fullName>UserInfoSessionCache__c</fullName>
    <description>Session Partition used to cahce user info</description>
    <label>User Info Session Cache</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>