core/main/default/objects/CoreSetting__mdt/fields/WithSchemaDescriber__c.field-meta.xml
<CustomField>
    <fullName>WithSchemaDescriber__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enforce field and object level data protection with Schema Describer</description>
    <inlineHelpText>Enforce field and object level data protection with Schema Describer</inlineHelpText>
    <label>With Schema Describer</label>
    <type>Checkbox</type>
</CustomField>