core/main/default/objects/CoreSetting__mdt/fields/WithSecurityEnforced__c.field-meta.xml
<CustomField>
    <fullName>WithSecurityEnforced__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Add WITH SECURITY_ENFORCED to SOQL queries</description>
    <label>With Security Enforced</label>
    <type>Checkbox</type>
</CustomField>