core/main/default/objects/CoreSetting__mdt/fields/WithStripInaccessible__c.field-meta.xml
<CustomField>
    <fullName>WithStripInaccessible__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enforce field and object level data protection</description>
    <inlineHelpText>Enforce field and object level data protection</inlineHelpText>
    <label>With StripInaccessible</label>
    <type>Checkbox</type>
</CustomField>